# teamspeak-prometheus

./: .gitignore  CLAUDE.md  Dockerfile  GEMINI.md  LICENSE.md  README.md  app.py  config.yaml  config.yaml.example  docker-compose.yml  go.mod  go.sum  grafana-dashboard.json  metrics.py  pyproject.toml
cmd/ts3-exporter/: main.go
internal/collector/: collector.go
internal/config/: config.go  config_test.go
internal/ts3/: client.go  parser.go  pool.go  pool_test.go  protocol.go
legacy_python/src/ts3_exporter/: main.py
legacy_python/tests/: test_app.py
src/ts3_exporter/: __init__.py  config.py
tests/: test_app.py
