[project]
name = "teamspeak-prometheus"
version = "0.1.0"
description = "TeamSpeak 3 Prometheus 导出器 - 监控服务器状态与在线玩家"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "仙姑本咕" }
]
dependencies = [
    "prometheus-client>=0.24.1",
    "python-ts3",
    "pyyaml>=6.0.3",
]

[project.scripts]
ts3-exporter = "ts3_exporter.main:main"

[project.urls]
Homepage = "https://github.com/hexgu/teamspeak-prometheus/"
Repository = "https://github.com/hexgu/teamspeak-prometheus/"

[tool.uv.sources]
python-ts3 = { git = "https://github.com/nikdoof/python-ts3.git" }
