[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "prometheus-client>=0.24.1",
    "python-ts3",
    "pyyaml>=6.0.3",
]

[tool.uv.sources]
python-ts3 = { git = "https://github.com/nikdoof/python-ts3.git" }
